--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,3 +24,6 @@ services:
                         - "8000:9000"
                 environment:
                         ZK_HOSTS: "zookeeper:2181"
+                        KAFKA_MANAGER_AUTH_ENABLED: "true"
+                        KAFKA_MANAGER_USERNAME: kuser
+                        KAFKA_MANAGER_PASSWORD: kpassword
